--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="form-group">
+    <%= f.label :student %>
+    <%= f.collection_select :student_id, Student.all, :id, :name, {}, {class: 'form-control'} %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: 'form-control' %>
   </div>
