Add assignment percentage

--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Score</th>
       <th>Total</th>
+      <th>Percentage</th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +17,7 @@
         <td><%= assignment.name %></td>
         <td><%= assignment.score %></td>
         <td><%= assignment.total %></td>
+        <td><%= assignment.percentage %>%</td>
       </tr>
     <% end %>
   </tbody>
