Move assignment uploads to the admin namespace

--- a/app/views/admin/assignments/index.html.erb
+++ b/app/views/admin/assignments/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <%= link_to "Create assignment", new_admin_assignment_path, class: "btn btn-primary pull-right" %>
-  <%= link_to "Upload assignments", assignment_upload_path, class: "btn btn-primary pull-right push--right" %>
+  <%= link_to "Upload assignments", admin_assignment_upload_path, class: "btn btn-primary pull-right push--right" %>
   <h1>All Assignments</h1>
 </div>
 
