--- a/app/views/admin/assignment_uploads/show.html.erb
+++ b/app/views/admin/assignment_uploads/show.html.erb
@@ -4,9 +4,9 @@
 
 <div class="row">
   <div class="col-md-6">
-    <%= form_tag :assignment_upload, multipart: true do %>
+    <%= form_tag :admin_assignment_upload, multipart: true do %>
       <div class="form-group">
-        <%= file_field_tag :file, class: "form-control" %>
+        <%= file_field_tag :file %>
       </div>
       <%= submit_tag 'Upload', class: "btn btn-primary" %>
     <% end %>
